# ConwaysLIfe

./: CMakeLists.txt  README.md
Headers/: Cells.h  Field.h  GameLogic.h  Interaction.h
Source Files/: main.cpp
